# etl-pipeline

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
clickhouse/: config.xml  init.sql
clickhouse/users.d/: lattica.xml
common/: canonical.py
scripts/: import_duckdb.py  import_orderbook.py
tests/: test_canonical.py
