[project]
name = "lattica-etl-pipeline"
version = "0.1.0"
description = "Lattica ETL pipeline — Polymarket WSS/Gamma/Data API -> ClickHouse, in-memory market state, IPC to quote-api"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "clickhouse-connect>=0.8.0",
  "duckdb>=1.1.0",
  "grpcio>=1.78.0",
  "grpcio-tools>=1.78.0",
  "httpx>=0.28.1",
  "protobuf>=6.33.5",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.13.1",
  "websockets>=15.0.1",
]

[dependency-groups]
dev = [
  "grpcio-testing>=1.70.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-httpx>=0.36.0",
  "ruff>=0.15.5",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
exclude = ["*_pb2.py", "*_pb2.pyi", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "SIM", "ASYNC", "RET", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20"]
